<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/Marvel_Logo"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="-150dp"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/marvelogo"
        android:layout_marginBottom="100dp"/>
    <ImageView
        android:id="@+id/DCLogo"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:layout_marginTop="-200dp"
        android:layout_marginStart="100dp"
        android:src="@drawable/dlogo"
        android:layout_marginBottom="100dp"/>

    <TextView
        android:id="@+id/app_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/App_heading"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/Card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp"
        android:backgroundTint="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/welcome_txt"
                android:textAlignment="center"
                android:textColor="#363A43"
                android:textSize="30sp"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/name_enterTxt"
                android:textColor="#7A8089"
                android:textSize="16sp"
                android:gravity="center"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/EditName_Box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="5dp"
                android:elevation="5dp"
                android:hint="@string/hint_name"
                android:textColorHint="#7A8089"
                android:gravity="center">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditName_Text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/Start_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="@string/StartBttnTxt"
                android:textAlignment="center"
                android:textSize="16sp"
                android:gravity="center"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>